--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31,7 +31,14 @@
 }
 .container{
 	font-family: 'Karla', sans-serif;
+  background-color: white;
 }
+#app{
+  /*background-image: url("/images/background.jpg");*/
+
+  background-size:contain;
+}
+
 
 /*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
