--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31,13 +31,109 @@
 }
 .container{
 	font-family: 'Karla', sans-serif;
-  background-color: white;
 }
 #app{
   /*background-image: url("/images/background.jpg");*/
 
   background-size:contain;
 }
+.form-control.form-error {
+
+  border: 2px solid #e74c3c;
+}
+.vertical-menu {
+  width: 100%;
+}
+
+.vertical-menu a {
+  border: 1px solid;
+  display: block;
+  padding: 12px;
+  text-decoration: none;
+}
+
+#outer
+{
+    width:100%;
+    text-align: center;
+}
+.inner
+{
+    display: inline-block;
+}
+.modal-confirm {    
+    color: #636363;
+    width: 400px;
+  }
+  .modal-confirm .modal-content {
+    padding: 20px;
+    border-radius: 5px;
+    border: none;
+    text-align: center;
+    font-size: 14px;
+  }
+  .modal-confirm .modal-header {
+    border-bottom: none;   
+    position: relative;
+  }
+  .modal-confirm .close {
+    position: absolute;
+    top: -5px;
+    right: -2px;
+  }
+  .modal-confirm .modal-body {
+    color: #999;
+  }
+  .modal-confirm .modal-footer {
+    border: none;
+    text-align: center;   
+    border-radius: 5px;
+    font-size: 13px;
+    padding: 10px 15px 25px;
+    display: inline;
+  }
+  .modal-confirm .modal-footer a {
+    color: #999;
+  }   
+  .modal-confirm .icon-box {
+    margin: 0 auto;
+  }
+  .modal-confirm .icon-box i {
+    color: #f15e5e;
+    font-size: 100px;
+    display: inline-block;
+    margin-top: 13px;
+  }
+    .modal-confirm .btn {
+      color: #fff;
+      border-radius: 4px;
+      background: #60c7c1;
+      text-decoration: none;
+      transition: all 0.4s;
+      line-height: normal;
+      min-width: 120px;
+      border: none;
+      min-height: 40px;
+      border-radius: 3px;
+      margin: 0 5px;
+      outline: none !important;
+    }
+  .modal-confirm .btn-info {
+        background: #c1c1c1;
+    }
+    .modal-confirm .btn-info:hover, .modal-confirm .btn-info:focus {
+        background: #a8a8a8;
+    }
+    .modal-confirm .btn-danger {
+        background: #f15e5e;
+    }
+    .modal-confirm .btn-danger:hover, .modal-confirm .btn-danger:focus {
+        background: #ee3535;
+    }
+  .trigger-btn {
+    display: inline-block;
+    margin: 100px auto;
+  }
 
 
 /*!
